--- a/spring-boot-shiro/src/main/resources/templates/index.html
+++ b/spring-boot-shiro/src/main/resources/templates/index.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>update</title>
+    <title>首页</title>
 </head>
 <body>
-
+<h1>首页</h1>
+<p th:text="${msg}"></p>
 </body>
 </html>
