--- a/spring-boot-shiro/src/main/resources/templates/login.html
+++ b/spring-boot-shiro/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <h1>登录</h1>
 <hr>
 
-<form action="">
+<form th:action="@{/login}">
     <p>用户名：<input type="text" name="username"></p>
     <p>密码：<input type="text" name="password"></p>
     <p><input type="submit"></p>
