--- a/spring-boot-security/src/main/resources/templates/index.html
+++ b/spring-boot-security/src/main/resources/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>首页</title>
     <!--semantic-ui-->
-    <link href="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
+    <link th:href="@{/qinjiang/css/semantic.min.css}" rel="stylesheet">
     <link th:href="@{/qinjiang/css/qinstyle.css}" rel="stylesheet">
 </head>
 <body>
@@ -17,11 +17,10 @@
 
     <div class="ui segment" id="index-header-nav" th:fragment="nav-menu">
         <div class="ui secondary menu">
-            <a class="item"  th:href="@{/index}">首页</a>
+            <a class="item" th:href="@{/index}">首页</a>
 
             <!--登录注销-->
             <div class="right menu">
-
 
                 <!--如果未登录-->
                 <div sec:authorize="!isAuthenticated()">
@@ -29,12 +28,11 @@
                         <i class="address card icon"></i> 登录
                     </a>
                 </div>
-                <!--如果已登录-->
+                <!--如果已登录：用户名，注销-->
                 <div sec:authorize="isAuthenticated()">
                     <a class="item">
-                        <i class="address card icon"></i>
-                        用户名：<span sec:authentication="principal.username"></span>&nbsp;&nbsp;
-                        角色：<span sec:authentication="principal.authorities"></span>
+                        用户名：<span sec:authentication="name"></span>&nbsp;&nbsp;
+                        <!--角色：<span sec:authentication=""></span>-->
                     </a>
                 </div>
                 <div sec:authorize="isAuthenticated()">
@@ -42,18 +40,6 @@
                         <i class="address card icon"></i> 注销
                     </a>
                 </div>
-<!--                &lt;!&ndash;未登录&ndash;&gt;-->
-<!--                <a class="item" th:href="@{/toLoginForm}">-->
-<!--                    <i class="address card icon"></i> 登录-->
-<!--                </a>-->
-<!--                <a class="item" th:href="@{/logout}">-->
-<!--                    <i class="address card icon"></i> 注销-->
-<!--                </a>-->
-                <!--已登录
-                <a th:href="@{/usr/toUserCenter}">
-                    <i class="address card icon"></i> admin
-                </a>
-                -->
             </div>
         </div>
     </div>
@@ -65,6 +51,8 @@
     <div>
         <br>
         <div class="ui three column stackable grid">
+
+            <!--菜单根据用户的角色动态的实现~-->
             <div class="column" sec:authorize="hasRole('vip1')">
                 <div class="ui raised segment">
                     <div class="ui">
@@ -109,7 +97,7 @@
 
         </div>
     </div>
-    
+
 </div>
 
 
