--- a/spring-boot-security/src/main/resources/templates/views/level2/3.html
+++ b/spring-boot-security/src/main/resources/templates/views/level2/3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>首页</title>
     <!--semantic-ui-->
-    <link href="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
+    <link th:href="@{/qinjiang/css/semantic.min.css}" rel="stylesheet">
     <link th:href="@{/qinjiang/css/qinstyle.css}" rel="stylesheet">
 </head>
 <body>
