--- a/spring-boot-security/src/main/resources/templates/views/login.html
+++ b/spring-boot-security/src/main/resources/templates/views/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>登录</title>
     <!--semantic-ui-->
-    <link href="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
+    <link th:href="@{/qinjiang/css/semantic.min.css}" rel="stylesheet">
 </head>
 <body>
 
@@ -26,14 +26,14 @@
                             <div class="field">
                                 <label>Username</label>
                                 <div class="ui left icon input">
-                                    <input type="text" placeholder="Username" name="username">
+                                    <input type="text" placeholder="Username" name="user">
                                     <i class="user icon"></i>
                                 </div>
                             </div>
                             <div class="field">
                                 <label>Password</label>
                                 <div class="ui left icon input">
-                                    <input type="password" name="password">
+                                    <input type="password" name="pwd">
                                     <i class="lock icon"></i>
                                 </div>
                             </div>
