--- a/spring-boot-vue/src/main/resources/templates/beauty/beauty-save.html
+++ b/spring-boot-vue/src/main/resources/templates/beauty/beauty-save.html
@@ -37,9 +37,9 @@
         <div class="form-group">
             <label for="name">性别</label>
             <select v-model="obj.gender" id="gender" class="form-control">
-                <option value="未知">未知</option>
-                <option value="男">男</option>
-                <option value="女">女</option>
+                <option value="0">未知</option>
+                <option value="1">男</option>
+                <option value="2">女</option>
             </select>
         </div>
         <span v-on:click="dataSave" class="btn btn-primary">添加</span>
@@ -55,7 +55,7 @@
         el: '#app',
         data: {
             obj: {
-                gender:"未知"
+                gender: 0
             }
         },
         methods: {
@@ -63,8 +63,8 @@
                 axios.post('/beauty/ajax/save', {
                     id: $("#id").val(),        // 参数 firstName
                     name: $("#name").val(),    // 参数 lastName
-                    age:$("#age").val(),
-                    gender:$("#gender").val()
+                    age: $("#age").val(),
+                    gender: $("#gender").val()
                 })
                     .then(function (response) {
                         console.log(response);
