--- a/spring-boot-vue/src/main/resources/templates/beauty/beauty-list.html
+++ b/spring-boot-vue/src/main/resources/templates/beauty/beauty-list.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" th:href="@{/common/bootstrap/css/bootstrap.min.css}">
+    <link th:href="@{/custom/css/style.css}" rel="stylesheet">
     <script th:src="@{/common/vue.min.js}"></script>
     <script th:src="@{/common/axios.min.js}"></script>
 
@@ -24,6 +25,15 @@
     <div class="page-header">
         <h1>女神排名 <small>Subtext for header</small></h1>
     </div>
+    <form class="form-inline">
+        <div class="form-group">
+            <label class="sr-only" for="name">姓名</label>
+            <input type="text" class="form-control" id="name" v-model="query.name" placeholder="姓名">
+        </div>
+        <span class="btn btn-primary" v-on:click="queryList(1)">查询</span>
+        <span class="btn btn-warning" v-on:click="clearQuery">清空</span>
+    </form>
+    <hr>
     <a th:href="@{/beauty/save}" class="btn btn-success">添加</a>
     <hr>
     <table class="table table-bordered">
@@ -37,54 +47,92 @@
         </tr>
         </thead>
         <tbody>
-        <tr v-for="(item,index) in list">
+        <tr v-for="(item,index) in pageInfo.list">
             <th scope="row">{{index+1}}</th>
             <td>{{item.name}}</td>
             <td>{{item.age}}</td>
-            <td>{{item.gender}}</td>
+            <td>{{item.gender==2?'女':(item.gender==1?'男':'未知')}}</td>
             <td>
-<!--                <a v-bind:href="'/beauty/ajax/save'+{{item.id}}"  class="btn btn-primary btn-xs">编辑</a>-->
-<!--                <span class="btn btn-danger btn-xs" v-on:click="dataDel({{item.id}})">删除</span>-->
+                <a v-bind:href="'/beauty/save?id='+item.id" class="btn btn-primary btn-xs">编辑</a>
+                <span class="btn btn-danger btn-xs" v-on:click="dataDel(item.id)">删除</span>
             </td>
         </tr>
         </tbody>
     </table>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li v-if="pageInfo.hasPreviousPage">
+                <span class="fyl-pointer" v-on:click="queryList(pageInfo.prePage)" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </span>
+            </li>
+            <li v-bind:class="{'active':pageInfo.pageNum==num}" v-for="num in pageInfo.navigatepageNums"><span
+                    v-on:click="queryList(num)" class="fyl-pointer">{{num}}</span></li>
+            <li v-if="pageInfo.hasNextPage">
+                <span class="fyl-pointer" v-on:click="queryList(pageInfo.nextPage)" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </span>
+            </li>
+        </ul>
+    </nav>
 </div>
 
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script th:src="@{/common/bootstrap/js/jquery.min.js}"></script>
 <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
 <script th:src="@{/common/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/custom/js/common.js}"></script>
 <script>
     new Vue({
         el: '#app',
         data: {
-            list: [],
+            pageInfo: {},
+            query: {}
         },
-        methods:{
-            dataDel: function(id){
+        methods: {
+            dataDel: function (id) {
                 axios.post('/beauty/ajax/delete', {
-                    id: id,
+                    params: {
+                        id: id
+                    }
                 })
                     .then(function (response) {
-                        console.log(response);
+                        var res = response.data;
+                        if (res.status) {
+                            location.reload()
+                        }
                     })
                     .catch(function (error) {
                         console.log(error);
                     });
-            }
+            },
+            queryList: function (pageNum) {
+                var _this = this;
+                axios
+                    .post('/beauty/ajax/list', {
+                        pageNum: pageNum,
+                        name: _this.query.name
+                    })
+                    .then(function (response) {
+                        var res = response.data;
+                        if (res.status) {
+                            console.log(res.data)
+                            _this.pageInfo = res.data
+                        }
+                    })
+                    .catch(function (error) { // 请求失败处理
+                        console.log(error);
+                    });
+            },
+            clearQuery:function(){
+                var _this = this;
+                _this.query={};
+                _this.queryList(1);
+            },
         },
         mounted() {
             var _this = this;
-            axios
-                .get('/beauty/ajax/list')
-                .then(function (response) {
-                    console.log(response)
-                    _this.list = response.data.data
-                })
-                .catch(function (error) { // 请求失败处理
-                    console.log(error);
-                });
+            _this.queryList(1);
         }
     });
 </script>
